--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,11 +1,11 @@
 flutter_native_splash:
-  color: "#FFFFF"
+  color: "#0000FF"
   color_dark: "#272727"
   image: assets/logos/logo-tek.png
   image_dark: assets/logos/logo-tek.png
 
   android_12:
-    color: "#FFFFF"
+    color: "#0000FF"
     color_dark: "#272727"
     image: assets/logos/logo-tek.png
     image_dark: assets/logos/logo-tek.png
