--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   intl: ^0.18.1
   logger: ^2.0.1
   url_launcher: ^6.1.12
+  carousel_slider: ^5.0.0
   flutter_native_splash: ^2.3.2
   smooth_page_indicator: ^1.1.0
 
@@ -80,7 +81,6 @@ flutter:
     - assets/icons/categories/
     - assets/icons/brands/
     - assets/logos/
-    - assets/logos/
     - assets/logos/logo-tek.png
     - assets/logos/logofacebook.png
     - assets/logos/logogoogle.png
@@ -89,6 +89,10 @@ flutter:
     - assets/images/on_boarding_images/shop.gif
     - assets/images/on_boarding_images/searching.gif
     - assets/images/animations/
+    - assets/images/banners/
+    - assets/images/banners/promo2.jpg
+    - assets/images/banners/promo1.jpg
+    - assets/images/banners/promo3.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
