--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,7 @@ flutter:
     - assets/images/products/men/
     - assets/images/products/women/
     - assets/images/products/shoes/
+    - assets/images/user/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
