--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,7 @@ flutter:
     - assets/images/products/shoes/
     - assets/images/user/
     - assets/images/reviews/
+    - assets/icons/payment/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
