--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   intl: ^0.18.1
   logger: ^2.0.1
   url_launcher: ^6.1.12
+  lottie: ^3.1.3
+  connectivity_plus: ^6.1.0
   carousel_slider: ^5.0.0
   flutter_native_splash: ^2.3.2
   smooth_page_indicator: ^1.1.0
@@ -49,7 +51,6 @@ dependencies:
   #state Management
   get: ^4.5.6
   get_storage: ^2.1.1
-
   readmore: ^3.0.0
   flutter_rating_bar: ^4.0.1
   firebase_core: ^3.7.0
