--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   readmore: ^3.0.0
   flutter_rating_bar: ^4.0.1
   firebase_core: ^3.7.0
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.5.0
 
 
 dev_dependencies:
